27 Apr 2006: 
   Wouter:
	- nsec3 review fixes.
   Jelte:
   	- small non-null options check in nsd.c.


25 Apr 2006: Wouter
	- Tests on NSEC3 code. Fixed that the unsecure delegations also
	  have _ds_ parent nsec3 prehashes, so that they get proper NSEC3s.
	  NSD will serve NSEC3s to prove 'opt-out' also if the opt-out bit
	  is (erroneously) not set.
	- For the 05pre2 draft section 5.4.8.1. QTYPE is NSEC3, only NSEC3
	  RRsets at name. Fixed that RRSIGs present do not matter.
	  And also the closest encloser proof in that case fixed.
	  If wildcard exists below zone apex servfails (cannot disprove
	  it and NSD cannot instantiate the wildcard at that point).

24 Apr 2006: Miek
   Miek:
	- forward port nsid (disabled by default)
   Wouter:
	- nsd-patch manual page.
	- minor MacOSX port fixes.
	- xfrd-reload-timeout: config option.
	- if you set the xfrd reload timeout to -1 it will not
	  automatically reload after a transfer. User can reload.
	- reload timeout is a wait period after the reload is triggered.
	- more verbose acl logging. Validated acls are logged in detail.
	  Invalid acls are only logged in debug mode, level >= 1.
	- log message when xfrd tcp connections max out.
	- if unknown NSEC3 hash type (not SHA-1), disable NSEC3.
	- xfrd randomizes the timeouts, within 10% of original,
	  to spread out activity. Short timeouts < 10 seconds are not
	  affected, and will give activity bursts (on startup for example).

21 Apr 2006: Wouter
	- put NSEC3 code in nsec3.c and nsec3.h.
	- iterated_hash only adds the salt if salt_len > 0.
	- added some assertions and cleanups to nsec3 code.
	- prehash also calcs the nsec3_last domain*.
	- dbaccess when reading in will set the rr_type.owner value.
	- changed namedb_find_zone to domain_find_zone, log msgs.
	- implemented logic from nsec draft 05-pre2 section 5.4.1 - 5.4.8.
	  NSEC3 responses only happen for nsd compiled with --enable-nsec3
	  and for zones where an NSEC3 with the SOA bit set exists.